--- a/buildspec-client.yml
+++ b/buildspec-client.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 14
+      nodejs: 20  # Use a supported version (18 or 20)
     commands:
       - cd client  # Change to the client directory
       - npm install  # Install Node.js dependencies
