--- a/buildspec-server.yml
+++ b/buildspec-server.yml
@@ -3,16 +3,13 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 20  # Choose a version compatible with your project
-
-  pre_build:
+      nodejs: 20  # Use a supported version (18 or 20)
     commands:
       - cd server  # Change to the server directory
       - npm install  # Install Node.js dependencies
 
   build:
     commands:
-      - npm test  # Run tests if applicable
       - npm run build  # Or your build command for the server
 
 cache:
